{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "913bf626-18a6-43f0-9690-9327ea1c78d1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0137a220-d852-4b4c-8330-d59d2cde8b5e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "SlowTap",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "bdb8997d-81ed-41d2-90ce-b5b1c3cff0b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "1f74dbc1-fabe-42bd-b3f4-584cd1792d1b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "3afbac85-cabf-4892-9b0e-da4d27562f90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TearOff",
                    "type": "Button",
                    "id": "7a12dfdf-03c2-4d94-b2f4-26528163efd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Call",
                    "type": "Button",
                    "id": "df9c01b0-c020-44d8-9946-b3acd76705fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "507988ce-372a-4f32-b230-08288ef4f5a2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "870c0c59-e33c-472f-9b51-a66a91e2cf57",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bcecdcd-2e80-482c-9952-90e1cfb64273",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd12d86b-2c36-44c8-a0d9-2620d0ed5639",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8e3b027-948d-4ce9-a425-08acbe31b6a9",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ad4a980-ae0e-4ab6-8d01-0faad7382b22",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TearOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf4326d0-cebb-431e-a2a7-85ff56b3955a",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Call",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}